--- a/styles/style.css
+++ b/styles/style.css
@@ -1,57 +1,49 @@
 body {
     font-family: 'Manrope', sans-serif;
-}
-
-h1{
-    width: 956px;    
-    font-style: normal;
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 60px;
-    color: #121212;    
-    margin-bottom: 30px;
-}
-h2{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    color: #121212; 
-}
-p{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 27px;
-
-    color: black;
+    width: 100%; 
+    background: #F5F5F5;
 }
 
 .container{
-    width: 1150px;
     margin: 0 auto;
+    width: 1400px;    
     box-sizing: border-box;
+    background: #FFFFFF;
+    padding-left: 125px;
+    padding-right: 125px;
+
 }
+
+h1{     
+    width: 956px;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+    color: #121212;    
+    margin-bottom: 30px; 
+    letter-spacing: -0.03em;
+} 
 
 .interior{
     width: 1150px;
     height: 500px;
 
-    background-image: url('../resources/img_design.png');
+    background-image: url('../resources/design.png');
     margin-bottom: 150px;
 }
-.interior p{
-    width: 460px;
-    height: 81px;
 
+.interior-text{    
+    width: 430px;      
     padding-left: 40px;
-    padding-top: 379px;
-    
+    padding-top: 379px;        
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 27px;
+    letter-spacing: -0.03em;
     color: #FFFFFF;
+    
 }
 
 .about-us {
@@ -60,19 +52,19 @@ p{
     margin-bottom: 30px; 
 }
 
-.about-us h2{
-    font-style: normal;
+.about-us h2{    
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
+    letter-spacing: -0.03em;
     color: #121212;  
     margin-bottom: 30px; 
 }
-.about-us p{    
-    font-style: normal;
+.about-us p{  
     font-weight: 400;
     font-size: 45px;
     line-height: 61px;
+    letter-spacing: -0.03em;
     color: #121212;  
     margin-bottom: 30px;
 }
@@ -91,4 +83,4 @@ p{
     color: #FFFFFF;  
     text-align: center;
     text-decoration: none;
-}
+}  
