--- a/styles/style.css
+++ b/styles/style.css
@@ -11,32 +11,34 @@ body {
     background: #FFFFFF;
     padding-left: 125px;
     padding-right: 125px;
-
+    padding-bottom: 150px;
 }
 
 h1{     
+    margin-bottom: 30px; 
     width: 956px;
     font-weight: 400;
     font-size: 60px;
     line-height: 60px;
     text-align: left;
     color: #121212;    
-    margin-bottom: 30px; 
     letter-spacing: -0.03em;
 } 
 
 .interior{
+    margin-bottom: 150px;
+    position: relative;
     width: 1150px;
     height: 500px;
-
     background-image: url('../resources/design.png');
-    margin-bottom: 150px;
+    
 }
 
 .interior-text{    
-    width: 430px;      
-    padding-left: 40px;
-    padding-top: 379px;        
+    width: 430px; 
+    position: absolute;
+    left: 40px;
+    bottom: 40px;       
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -84,3 +86,101 @@ h1{
     text-align: center;
     text-decoration: none;
 }  
+
+.projects-list {
+    margin-top: 150px;    
+}
+
+.projects-list__header {
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;  
+}
+
+.projects__item{
+    width: 1150px;
+}
+
+.projects-list__item-img{
+    margin-bottom: 15px;
+}
+
+.projects-list__item-name{
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    color: #121212;
+}
+
+.projects-list__item-ref{    
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    color: #AD1818;
+    text-decoration: none;
+}
+
+.btn {
+    margin-top: 90px;
+    display: block;
+    width: 100%;
+    height: 153px;
+    border: 1px solid #AD1818;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 153px;
+    text-decoration: none;
+    color: #AD1818;
+}
+
+.btn:hover{
+    background-color: #AD1818;
+    color: #FFFFFF;
+}
+
+.section{
+    margin: 0 auto;
+    width: 1400px;    
+    box-sizing: border-box;
+    padding-left: 125px;
+    padding-right: 125px;
+    background-color: #121212;
+}
+
+.services{
+    width: 1150px;
+    padding-top: 151px;    
+    color: #FFFFFF;
+}
+
+.services-list{
+    margin-bottom: 34px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.03em;
+}
+
+.services-list__item{
+    padding-bottom: 60px;
+}
+
+.services-list__item:nth-last-child(1){
+    padding-bottom: 150px;
+}
+.services-list__item-img{
+    padding-bottom: 15px;
+}
+
+.services-list__item-wrapper{
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+}
