--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,67 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Manrope', sans-serif;
     width: 100%; 
+    background: #F5F5F5;
+
 }
+
+.container-nav{
+    margin: 0 auto;
+    width: 1400px;    
+    box-sizing: border-box;
+    background: #FFFFFF;
+    padding-top: 33px;
+    padding-left: 124.65px;
+    padding-right: 125px;
+    padding-bottom: 70px;
+}
+
+.nav-logo{
+    display: inline-block;
+}
+
+.logo{
+    display: block;
+    width: 126.89px;
+    height: 21.42px;
+}
+
+.nav{
+    display: inline-block;
+    vertical-align: top;
+}
+
+.nav__link{
+    display: inline-block;
+    margin-right: 58px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25.18px;
+    letter-spacing: -0.03em;
+    color: #121212;
+    text-decoration: none;
+}
+
+.nav__link:first-child{  
+    margin-left: 555px;  /* при проверке через пиксель перфикт проверить отступ */
+}
+
+.nav__link:nth-last-child(1){  
+    margin-right: 0px;
+    margin-left: -1px;  /* при проверке через пиксель перфикт проверить отступ */
+}
+
+.nav__link:hover {
+    text-decoration: underline;
+    opacity: 0.5;
+}
+
+
 
 .container{
     margin: 0 auto;
@@ -10,7 +70,7 @@ body {
     background: #FFFFFF;
     padding-left: 125px;
     padding-right: 125px;
-    padding-bottom: 150px;
+    padding-bottom: 151px;
 }
 
 h1{     
@@ -62,25 +122,27 @@ h1{
     margin-bottom: 30px; 
 }
 .about-us p{  
+    margin-bottom: 30px;
+    margin-top: 31px;
+    margin-left: 2px;
     font-weight: 400;
     font-size: 45px;
     line-height: 61px;
     letter-spacing: -0.03em;
     color: #121212;  
-    margin-bottom: 30px;
 }
 
 .about-us a{ 
     display: block;
-    width: 255px;
-    height: 67.32px;
+    width: 253px;
+    height: 64px;
     border: 1px solid #AD1818;
     border-radius: 5px;
     background-color: #AD1818;        
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 67.32px;
+    font-size: 19px;
+    line-height: 64px;
     color: #FFFFFF;  
     text-align: center;
     text-decoration: none;
@@ -95,6 +157,8 @@ h1{
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;  
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
 }
 
 .projects__item{
@@ -105,7 +169,7 @@ h1{
     margin-bottom: 90px;
 }
 .projects-list__item-img{
-    margin-bottom: 15px;
+    margin-bottom: 13px;
 }
 
 .projects-list__item-name{
@@ -126,16 +190,21 @@ h1{
     text-decoration: none;
 }
 
+.projects-list__item-ref:first-child{
+    margin-left: 2px;
+}
+
 .btn {    
     display: block;
     width: 100%;
-    height: 153px;
+    height: 150px;
     border: 1px solid #AD1818;
     border-radius: 5px;
     text-align: center;
     font-weight: 400;
     font-size: 30px;
-    line-height: 153px;
+    line-height: 150px;
+    letter-spacing: -0.03em;
     text-decoration: none;
     color: #AD1818;
 }
@@ -161,6 +230,7 @@ h1{
 }
 
 .services-list{
+    padding-left: 2px;
     margin-bottom: 34px;
     font-weight: 400;
     font-size: 18px;
@@ -176,12 +246,160 @@ h1{
     padding-bottom: 150px;
 }
 .services-list__item-img{
-    padding-bottom: 15px;
+    padding-bottom: 13px;
 }
 
 .services-list__item-wrapper{
+    padding-left: 4px;
     font-weight: 400;
     font-size: 30px;
     line-height: 41px;
     letter-spacing: -0.03em;
+}
+
+.project-banner{
+    margin: 0 auto;
+    width: 1400px;  /* Закомментировать чтобы картинка занимала 100% ширины экрана*/
+    height: 717px;
+    background-image: url('../resources/Project_forest_lanscape.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    position: relative;
+}
+
+.project-banner__wrapper {
+    position: absolute;
+    width: 443px;
+    left: 125px;
+    bottom: 60px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 41px;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+}
+.contact-section{
+    margin: 0 auto;
+    width: 1400px; 
+    height: 553px;   
+    box-sizing: border-box;
+    background: #FFFFFF;
+    padding-left: 125px;
+    padding-right: 125px;
+    padding-top: 186px;
+    padding-bottom: 150px;
+}
+
+.contact__item{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.03em;
+    color: #121212;
+    position: relative;
+}
+
+.contact__item::before{
+    content: ' ';
+    display: block;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    bottom: 37px;
+    left: -5px;   
+    background-image: url('../resources/iphone_img.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+.contact-number{
+    margin-top: 32px;
+    width: 472px;
+}
+
+.contact-number__wrapper {    
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+    color: #121212; 
+    text-decoration: none;   
+}
+
+.contact-mail{
+    margin-top: 30px;
+    width: 412px;
+}
+
+.contact-mail__wrapper{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+    color: #121212;
+    opacity: 0.5;
+    text-underline-offset: 13px;
+}
+
+.container-footer {
+    margin: 0 auto;
+    width: 1400px;
+    height: 229px;    
+    box-sizing: border-box;
+    position: relative;
+    background: #121212;
+}
+
+.footer__nav{
+    padding-left: 470px;
+    padding-top: 60px;
+    width: 600px;
+    height: 25px;    
+}
+
+.footer__link{        
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+    text-decoration: none;
+    margin-right: 51px;
+}
+
+.footer__link:nth-last-child(3){
+    margin-right: 53px;
+}
+
+.footer__link:nth-last-child(2){
+    margin-right: 52px;
+}
+
+.footer__link:nth-last-child(1){
+    margin-right: 0px;
+}
+
+
+.footer__link:hover {
+    opacity: 0.5;
+}
+
+.footer__title {
+    position: absolute;
+    left: 509px;
+    bottom: 30px;
+    color: #FFFFFF;    
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    opacity: 0.5;
 }
