--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 @import "./interior.css";
 @import "./about_us.css";
 @import "./project.css";
+@import "./service.css";
+@import "./reviews.css";
 
 html{
     scroll-behavior: smooth;
@@ -14,15 +16,14 @@ body {
 .container{
     margin: 0 auto;
     width: 1200px;    
-    box-sizing: border-box;
     background: #FFFFFF;
     padding-left: 25px;
     padding-right: 25px;
-    padding-bottom: 151px;
 }
 
 .btn {    
     display: block;
+    margin-bottom: 151px;
     padding: 55px 0px;
     width: 100%;    
     border: 1px solid #AD1818;
@@ -45,17 +46,24 @@ body {
     .container{        
         width: 100%;
         padding-left: 17px;
-        padding-right: 15px;   
+        padding-right: 15px;        
+    }
+
+    .btn{
+        margin-bottom: 104px;
     }
 }  
 @media (max-width: 767px) {
     .container{    
         padding-left: 13px;
         padding-right: 12px;
+        padding-bottom: 0px;
+        
     }
 
     .btn{
         padding: 34px 0px;
+        margin-bottom: 143px;
         font-size: 22px;
         line-height: 30px;
     }
