--- a/styles/service.css
+++ b/styles/service.css
@@ -1,42 +1,184 @@
-.section{
-    margin: 0 auto;        
-    box-sizing: border-box;
-    padding-left: 125px;
-    padding-right: 125px;
-    background-color: #121212;
-}
-
 .services{
+    background-color: #121212;}
+
+.services-inner{
     margin: 0 auto;
-    width: 1150px;
-    padding-top: 151px;    
+    width: 1200px;
+    padding: 151px 25px 150px 25px;
+    margin: 0 auto; 
     color: #FFFFFF;
 }
 
-.services-list{
+.services__header{
     padding-left: 2px;
-    margin-bottom: 34px;
+    margin-bottom: 31px;
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.03em;
 }
 
+.services__card-wrapper{
+    margin-bottom: 100px;
+}
+
+.services__row-card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 45px;
+}
+
+.services__collum-card{    
+    width: calc(50% - 5.5px);
+}
+
+/* .services-list__item-wrapper{
+    margin-bottom: 102px;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 45px;
+    justify-content: space-between;
+} */
+
 .services-list__item{
-    padding-bottom: 60px;
+    position: relative;
+    /* width: calc(50% - 5.5px); */
 }
 
-.services-list__item:nth-last-child(1){
-    padding-bottom: 150px;
-}
 .services-list__item-img{
-    padding-bottom: 13px;
+    display: block;
+    margin-bottom: 24px;
+    width: 100%;
+    height: 389px;
 }
 
-.services-list__item-wrapper{
-    padding-left: 4px;
-    font-weight: 400;
+.services-list__item-price{ 
+    padding: 5px 20px;   
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: -0.03em;
+    background-color: #AD1818;
+    border-radius: 5px; 
+}
+
+.services-list__item-header{
+    padding-left: 3px;
+    width: 250px;
     font-size: 30px;
     line-height: 41px;
     letter-spacing: -0.03em;
+}
+
+.services-btn{
+    display: block;    
+    width: 100%;
+    padding: 56px 0px;
+    font-size: 30px;
+    line-height: 41px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+    background-color: #AD1818;
+    border: 0px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+@media (max-width: 1199px){
+    .services-inner{
+        padding: 151px 16px 120px 14px;
+        width: 100%;
+    }
+
+    .services__row-card{
+        row-gap: 86px;
+    }
+    
+    .services__collum-card{    
+        width: calc(50% - 5px);
+    }
+
+    .services__card-wrapper{
+        margin-bottom: 88px;
+    }
+
+    .services__header{
+        padding-left: 5px;
+    }
+
+    .services-list__item-img{
+        height: 315px;
+        margin-bottom: 15px;
+        padding-left: 0px;
+    }
+
+    .services-list__item-price{
+        padding: 7px 26px 6px 27px;
+        left: 34px;
+        font-size: 20px;
+        line-height: 27px;
+
+    }
+
+    .services-list__item-header{
+        padding-left: 0px;
+        width: 100%;
+        font-size: 25px;
+        line-height: 34px;
+    }
+}
+
+@media (max-width: 767px) {
+    .services-inner{    
+        padding-left: 13px;
+        padding-right: 12px;
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+
+    .services__card-wrapper{
+        margin-bottom: 67px;
+    }
+    
+    .services__row-card{
+        row-gap: 66px;
+    }
+    .services__collum-card{
+        width: 100%;
+    }
+
+    .services__header{
+        padding-left: 4px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    .services-list__item-img{
+        height: 240px;
+        margin-bottom: 10px;
+    }
+
+    .services-list__item-price{
+        top: 23px;
+        left: 24px;
+        font-size: 14px;
+        line-height: 19px;
+        padding: 5px 23px 6px 24px;
+    }
+
+    .services-list__item-header{
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    .services-btn{
+        padding: 35px 0px;
+        font-size: 23px;
+        line-height: 30px;
+    }
 }
