--- a/styles/service.css
+++ b/styles/service.css
@@ -49,6 +49,7 @@
 .services-list__item-img{
     display: block;
     margin-bottom: 24px;
+    object-fit: cover;
     width: 100%;
     height: 389px;
 }
