--- a/styles/project.css
+++ b/styles/project.css
@@ -15,7 +15,7 @@
     margin-bottom: 89px;
 }
 
-.projects-list__item:nth-last-child(2) {
+.projects-list__item:last-child{
     margin-bottom: 91px;
 }
 
@@ -35,17 +35,13 @@
     color: #121212;
 }
 
-.projects-list__item-ref{    
+.projects-list__item-ref{        
     font-weight: 400;
     font-size: 20px;
     line-height: 27px;
     letter-spacing: -0.03em;
     color: #AD1818;
     text-decoration: none;    
-}
-
-.projects-list__item-ref:nth-last-child(1){
-    padding-left: 1px;
 }
 
 @media (max-width: 1199px){
@@ -58,7 +54,7 @@
         margin-bottom: 80px;
     }
 
-    .projects-list__item:nth-last-child(2){
+    .projects-list__item:last-child{
         margin-bottom: 100px;
     }
     
@@ -80,7 +76,7 @@
         margin-bottom: 50px;
     }
 
-    .projects-list__item:nth-last-child(2){
+    .projects-list__item:last-child{
         margin-bottom: 62px;
     }
     
