--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,26 +1,12 @@
-.contact-section{
-    margin: 0 auto;
-    width: 1400px; 
-    height: 553px;   
-    box-sizing: border-box;
-    background: #FFFFFF;
-    padding-left: 125px;
-    padding-right: 125px;
-    padding-top: 186px;
-    padding-bottom: 150px;
-}
-
 .contact__item{
-    font-style: normal;
-    font-weight: 400;
+    margin-top: 150px;
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.03em;
     color: #121212;
-    position: relative;
 }
 
-.contact__item::before{
+/* .contact__item::before{
     content: ' ';
     display: block;
     width: 24px;
@@ -32,17 +18,24 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%;
+} */
+
+.contact-wrapper{
+    margin-top: 74px;
+    margin-right: 162px;
+    display: flex;
+    justify-content: space-between;    
 }
 
-.contact-number{
+
+/* .contact-number{
     margin-top: 32px;
     width: 472px;
-}
+} */
 
-.contact-number__wrapper {    
-    font-family: 'Manrope';
-    font-style: normal;
-    font-weight: 400;
+.contact-number__arrow,
+.contact-mail__arrow{  
+    position: relative; 
     font-size: 60px;
     line-height: 60px;
     letter-spacing: -0.03em;
@@ -50,18 +43,89 @@
     text-decoration: none;   
 }
 
-.contact-mail{
+/* .contact-mail{
     margin-top: 30px;
     width: 412px;
-}
+} */
 
-.contact-mail__wrapper{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 60px;
-    letter-spacing: -0.03em;
-    color: #121212;
+.contact-mail__arrow{
     opacity: 0.5;
     text-underline-offset: 13px;
+}
+
+.contact-number__arrow::before{
+    background-image: url('../resources/iphone_img.png');
+}
+
+.contact-mail__arrow::before{
+    background-image: url('../resources/mail_img.png');
+}
+
+.contact-number__arrow::before,
+.contact-mail__arrow::before{
+    content: ' ';
+    display: block;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: -39px;
+    left: -5px; 
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
+
+@media (max-width: 1199px){
+    .contact__item{
+        margin-top: 120px;
+    }
+
+    .contact-wrapper{
+        margin-right: 151px;
+    }
+
+    .contact-number__arrow,
+    .contact-mail__arrow{
+        font-size: 45px;
+    }
+
+    .contact-number__arrow::before,
+    .contact-mail__arrow::before{
+        top: -49px;
+    }
+}
+
+@media (max-width: 767px){
+    .contact__item{
+        margin-top: 79px;
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    .contact-wrapper{
+        margin-top: 58px;
+        margin-right: 0px;
+        gap: 0px;
+        width: 100%;     
+        flex-wrap: wrap;
+        row-gap: 58px;   
+    }
+
+    .contact-number__arrow,
+    .contact-mail__arrow{
+        font-size: 35px;
+        line-height: 46px;
+        opacity: 1;
+    }
+    
+    .contact-number__arrow::before{
+        width: 18px;
+        top: -40px;
+        background-image: url('../resources/iphone_img_phone.png');
+    }
+    
+    .contact-mail__arrow::before{
+        top: -40px;
+        background-image: url('../resources/mail_img_phone.png');
+    }
+
 }
