--- a/styles/header.css
+++ b/styles/header.css
@@ -1,34 +1,28 @@
-.container-nav{
-    margin: 0 auto;
-    width: 1150px;    
-    box-sizing: border-box;
-    background: #FFFFFF;
-    padding-top: 33px;
-    padding-left: 124.65px;
-    padding-right: 125px;
-    padding-bottom: 70px;
+.body_fixed {
+    overflow: hidden;
 }
 
-.nav-logo{
-    display: inline-block;
+.header__inner{
+    margin-top: 33px;
+    margin-bottom: 70px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.logo{
+.header__logo{
     display: block;
     width: 126.89px;
     height: 21.42px;
 }
 
-.nav{
-    display: inline-block;
-    vertical-align: top;
+.header__nav-list{
+    display: flex;
+    gap: 60px;    
 }
 
-.nav__link{
-    display: inline-block;
-    margin-right: 58px;
-    font-style: normal;
-    font-weight: 400;
+.header__link{
     font-size: 18px;
     line-height: 25.18px;
     letter-spacing: -0.03em;
@@ -36,17 +30,203 @@
     text-decoration: none;
 }
 
-.nav__link:first-child{  
-    margin-left: 555px;  /* при проверке через пиксель перфикт проверить отступ */
-}
-
-.nav__link:nth-last-child(1){  
-    margin-right: 0px;
-    margin-left: -1px;  /* при проверке через пиксель перфикт проверить отступ */
-}
-
-.nav__link:hover {
+.header__link:hover{
     text-decoration: underline;
     text-underline-offset: 7px;
     opacity: 0.5;
+}
+
+.burger-btn{
+    display: none;
+}
+
+.burger{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    background-color: rgba(0, 0, 0, 0.9);
+    opacity: 0;
+    visibility: hidden;
+    transform: all 0.3s ease;
+}
+
+.burger_open{
+    opacity: 1;
+    z-index: 2;
+    visibility: visible;
+}
+
+.burger__content{   
+    height: 100%;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    padding-top: 79px;
+    width: 285px;
+    height: 100%;
+    background-color: #fff;
+    transition: transform 0.3s linear 0.1s;
+    transform: translateX(100%);
+}
+
+.burger_open .burger__content{
+    transform: translateX(0);
+}
+
+.burger-nav{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.burger-nav__link{
+    display: block;    
+    font-size: 32px;
+}
+
+.burger__btn{
+    display: none;
+}
+
+.burger__contacts{
+    margin-top: 89px;
+    padding-left: 3px;
+}
+
+.burger__contact-title{
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: -0.03em;
+    color: #000000;
+    opacity: 0.5;
+}
+
+.burger__contact-number{
+    margin-top: 13px;
+    margin-bottom: 11px;
+}
+
+.burger__contact-number__arrow{    
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #121212;
+    text-decoration: none;
+}
+
+.burger__contact-mail__arrow{
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: -0.03em;
+    color: #121212;
+    text-decoration: none;
+}
+
+@media (max-width: 1199px) {
+    .header__logo{
+        width: 127px;
+    }
+
+    .burger__content{
+        padding-left: 30px;
+    }
+
+    .burger__btn{
+        display: block;
+        width: 50px;        
+        position: relative;
+        background: none;
+        border: none;
+    }
+
+    .burger__btn::before,
+    .burger__btn::after{
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 2px;
+        width: 100%;
+        background-color: black;
+    }
+
+    .burger__btn::after{
+        top: 6px;
+        width: 31px;
+    }
+
+    .burger-btn_open::before,
+    .burger-btn_open::after{
+        display: none;
+    }
+
+    .burger-btn_open{
+        position: absolute;
+        z-index: 100;
+        top: -12px;
+        right: 16px;
+        width: 34px;
+        height: 34px;
+        background-image: url(../resources/off_burger.png);
+        background-repeat: no-repeat;
+        background-position: center;        
+    }
+
+    .header__nav{
+        display: none;
+    }
+
+    .header__inner{
+        margin-bottom: 74px;
+    }
+
+    .burger__nav-logo{
+        margin-bottom: 48px;
+    }
+
+    .burger__logo{
+        width: 156px;
+    }
+
+    .burger__nav-list{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .burger-nav__link{
+        font-size: 25px;
+        line-height: 34px;
+        letter-spacing: -0.03em;
+        text-transform: uppercase;
+        color: #000000;
+        text-decoration: none;
+    }
+    
+}  
+@media (max-width: 767px) {
+    .header__inner{
+        margin-top: 31px;
+        margin-bottom: 61px;
+    }
+
+    .header__logo{
+        width: 96px;
+        height: 16px;
+    }
+
+    .burger__btn{
+        width: 38px;
+    }
+    .burger__btn::after{
+        top: 5px;
+        width: 24px;
+    }
 }
