--- a/styles/service.css
+++ b/styles/service.css
@@ -74,7 +74,8 @@
     letter-spacing: -0.03em;
 }
 
-.services-btn{
+
+.popup__btn{
     display: block;    
     width: 100%;
     padding: 56px 0px;
@@ -88,6 +89,110 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.popup{
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 1;
+    visibility: hidden;
+    transition: opacity 0.2s ease;
+}
+
+.popup_open{
+    opacity: 1;
+    visibility: visible;
+}
+
+.body_fixed{
+    overflow: hidden;
+}
+
+.popup__content{
+    position: relative; 
+    width: 777px;
+    height: 708px;
+    max-height: 100%;
+    overflow-y: scroll;
+    padding: 94px 79px 68px 55px;
+    border-radius: 10px;
+    color: #000000;
+    background-color: #fff;
+}
+
+.popup__header{
+    margin-bottom: 2px;
+    font-size: 45px;
+    line-height: 61px;
+    text-align: center;
+    letter-spacing: -0.03em;
+}
+
+.popup__description{
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    margin-bottom: 62px;
+}
+
+.popup__close-btn{
+    position: absolute;
+    top: 40px;
+    right: 26px;
+    width: 50px;
+    height: 50px;
+}
+
+.popup__send-btn{
+    display: block;    
+    width: 100%;
+    padding: 20px 0px;
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+    background-color: #AD1818;
+    border: 0px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.popup__input-wrapper{
+    box-sizing: border-box;
+    margin-bottom: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 50px;
+}
+
+.popup__input{    
+    padding: 0px 0px 7px 0px;
+    width: 643px; 
+    font-size: 25px;
+    line-height: 34px;    
+    letter-spacing: -0.03em;
+    color: #000000;
+    opacity: 0.5;
+    border: none;
+    border-bottom: 2px solid;
+}
+
+.popup__input:focus{
+    outline: none;
+}
+
+
+
 
 @media (max-width: 1199px){
     .services-inner{
@@ -177,9 +282,49 @@
         line-height: 25px;
     }
 
-    .services-btn{
+    .popup__btn{
         padding: 35px 0px;
         font-size: 23px;
         line-height: 30px;
+    }
+
+    .popup{
+        padding: 12px;
+    }
+    
+    .popup__content{
+        padding: 80px 24px 80px 16px
+    }
+
+    .popup__header{
+        margin-left: 8px;
+        margin-bottom: 12px;
+        font-size: 25px;
+        line-height: 34px;
+    }
+
+    .popup__description{
+        margin-bottom: 60px;
+        
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    .popup__close-btn{        
+        top: 47px;
+        right: 23px;
+        width: 30px;
+        height: 30px;
+    }
+
+    .popup__input-wrapper{
+        margin-bottom: 55px;
+        row-gap: 45px;
+    }
+
+    .popup__input{
+        padding: 0px 0px 5px 0px;
+        font-size: 18px;
+        line-height: 25px;
     }
 }
