--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -32,6 +32,11 @@
     text-decoration: none;
 }  
 
+.about-us__link:hover{
+    background-color: #FFFFFF;
+    color: #AD1818;
+}
+
 @media (max-width: 1199px){
     .about-us{
         width: 100%;
