--- a/styles/interior.css
+++ b/styles/interior.css
@@ -68,6 +68,7 @@
 
     .interior-text{
         width: 100%;
+        max-width: 312px;
         padding-right: 23px;
         font-size: 16px;
         line-height: 22px;
