--- a/styles/service.css
+++ b/styles/service.css
@@ -33,17 +33,8 @@
     width: calc(50% - 5.5px);
 }
 
-/* .services-list__item-wrapper{
-    margin-bottom: 102px;
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 45px;
-    justify-content: space-between;
-} */
-
 .services-list__item{
-    position: relative;
-    /* width: calc(50% - 5.5px); */
+    position: relative;    
 }
 
 .services-list__item-img{
@@ -88,6 +79,11 @@
     border: 0px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.popup__btn:hover{
+    background-color: #FFFFFF;
+    color: #AD1818;
 }
 
 .popup{
@@ -156,6 +152,7 @@
     display: block;    
     width: 100%;
     padding: 20px 0px;
+    font-family: 'Manrope', sans-serif;
     font-size: 20px;
     line-height: 27px;
     text-align: center;
@@ -165,6 +162,12 @@
     border: 0px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.popup__send-btn:hover{
+    background-color: #FFFFFF;
+    border: 1px solid #AD1818;
+    color: #AD1818;
 }
 
 .popup__input-wrapper{
@@ -178,21 +181,19 @@
 .popup__input{    
     padding: 0px 0px 7px 0px;
     width: 643px; 
+    font-family: 'Manrope', sans-serif;
     font-size: 25px;
     line-height: 34px;    
     letter-spacing: -0.03em;
     color: #000000;
     opacity: 0.5;
     border: none;
-    border-bottom: 2px solid;
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
 
 .popup__input:focus{
     outline: none;
 }
-
-
-
 
 @media (max-width: 1199px){
     .services-inner{
@@ -323,7 +324,7 @@
     }
 
     .popup__input{
-        padding: 0px 0px 5px 0px;
+        padding: 0px 0px 5px 0px;        
         font-size: 18px;
         line-height: 25px;
     }
