--- a/styles/service.css
+++ b/styles/service.css
@@ -79,6 +79,7 @@
     border: 0px;
     border-radius: 5px;
     cursor: pointer;
+    transition-duration: 0.75s;
 }
 
 .popup__btn:hover{
@@ -162,6 +163,7 @@
     border: 0px;
     border-radius: 5px;
     cursor: pointer;
+    transition-duration: 0.75s;
 }
 
 .popup__send-btn:hover{
