--- a/styles/service.css
+++ b/styles/service.css
@@ -117,8 +117,7 @@
     position: relative; 
     width: 777px;
     height: 708px;
-    max-height: 100%;
-    overflow-y: scroll;
+    max-height: 100%;    
     padding: 94px 79px 68px 55px;
     border-radius: 10px;
     color: #000000;
@@ -162,8 +161,7 @@
     background-color: #AD1818;
     border: 0px;
     border-radius: 5px;
-    cursor: pointer;
-    transition-duration: 0.75s;
+    cursor: pointer;    
 }
 
 .popup__send-btn:hover{
@@ -238,6 +236,10 @@
         width: 100%;
         font-size: 25px;
         line-height: 34px;
+    }
+
+    .popup__content{
+        overflow-y: scroll;
     }
 }
 
